# snapcmakemodules

./: CMakeLists.txt  LICENSE.txt  README.md  TODO.md
Modules/: CassandraCppDriverConfig.cmake  CatchConfig.cmake  CheckCXXAbstractClass.cmake  CppUnitConfig.cmake  DumpCMakeVariablesConfig.cmake  FindSnapBuild.cmake  ICUConfig.cmake  LibEventConfig.cmake  LibQREncodeConfig.cmake  MagicConfig.cmake  ProcPSConfig.cmake  QREncodeConfig.cmake  QxCppUnitConfig.cmake  QxRunnerConfig.cmake  SnapBuildConfig.cmake  SnapBuildDputPackage.sh  SnapBuildIncDeps.pl  SnapBuildIncVers.pl  SnapBuildMakeSourcePackage.sh  SnapCMakeModulesConfig.cmake  SnapDoxygenConfig.cmake  SnapFindDeps.pl  SnapListPackages.pl  SnapMakeDepsCache.pl  SnapPBuilder.sh  SnapReprepro.sh  SnapRunUnitTests.sh  SnapTestRunnerConfig.cmake  clean-dependencies.gvpr  log4cplusConfig.cmake
debian/: changelog  control  copyright  docs  snapcmakemodules.install
scripts/: coverage  coverage-epilog.html  index.php  mk  simplify-dependencies.py
